--- a/.github/workflows/deploydist.yaml
+++ b/.github/workflows/deploydist.yaml
@@ -12,3 +12,15 @@ jobs:
             #   git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git myfiles
             #   cd myfiles
             #   ls -la
+          - name: Setup Node Js
+            uses: actions/setup-node@v6
+            with:
+              node-version: 22
+          - name: Print Node version
+            run: node -v
+          - name: Install Dependencies
+            run: npm -y install
+          - name: Run Tests
+            run: npm run test
+          - name: Completed Job
+            run: echo "Test job is complete"
