update to run build

--- a/.github/workflows/deploydist.yaml
+++ b/.github/workflows/deploydist.yaml
@@ -22,5 +22,18 @@ jobs:
             run: npm -y install
           - name: Run Tests
             run: npm run test
-          - name: Completed Job
-            run: echo "Test job is complete"
+    build:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Get Code
+            uses: actions/checkout@v5
+          - name: Setup Node Js
+            uses: actions/setup-node@v6
+            with:
+              node-version: 22
+          - name: Print Node version
+            run: node -v
+          - name: Install Dependencies
+            run: npm -y install
+          - name: Build Application
+            run: npm run build
