--- a/.github/workflows/deploydist.yaml
+++ b/.github/workflows/deploydist.yaml
@@ -22,7 +22,7 @@ jobs:
             uses: actions/cache@v4
             id: cache
             with:
-              path: ${{ steps.cache.outputs.dir }}
+              path: node_modules
               key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           - name: Install Dependencies
             if: steps.cache.outputs.cache-hit != 'true'
@@ -45,7 +45,7 @@ jobs:
             uses: actions/cache@v4
             id: cache
             with:
-              path: ${{ steps.cache.outputs.dir }}
+              path: node_modules
               key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           - name: Install Dependencies
             if: steps.cache.outputs.cache-hit != 'true'
