--- a/.github/workflows/deploydist.yaml
+++ b/.github/workflows/deploydist.yaml
@@ -52,9 +52,22 @@ jobs:
             run: npm -y install
           - name: Build Application
             run: npm run build
+          - name: Upload dist artifact
+            uses: actions/upload-artifact@v4
+            with:
+              name: dist-files
+              path: dist
     deploy:
         needs: build
         runs-on: ubuntu-latest
         steps:
+          - name: Download dist artifact
+            uses: actions/download-artifact@v4
+            with:
+              name: dist-files
+              path: dist
           - name: Deploy Dist
-            run: echo "Deployment completed"
+            run: | 
+                echo "Deploying below files"
+                ls dist
+                echo "Deployment completed"
