--- a/.github/workflows/deploydist.yaml
+++ b/.github/workflows/deploydist.yaml
@@ -22,7 +22,7 @@ jobs:
             #   cd myfiles
             #   ls -la
           - name: Setup node and install dependencies
-            uses: ../actions/setupnode
+            uses: ./.github/actions/setupnode
           - name: Run Tests
             run: npm run test
     build:
@@ -32,7 +32,7 @@ jobs:
           - name: Get Code
             uses: actions/checkout@v5
           - name: Setup node and install dependencies
-            uses: ../actions/setupnode
+            uses: ./.github/actions/setupnode
           - name: Build Application
             run: npm run build
           - name: Upload dist artifact
