refactored duplicate action

--- a/.github/actions/setupnode/action.yaml
+++ b/.github/actions/setupnode/action.yaml
@@ -1,4 +1,4 @@
-name: SEtup node and install dependencies
+name: Setup node and install dependencies
 description: "set up Node.js, caches dependencies, and installs them"
 runs:
   using: composite
