--- a/.github/actions/setupnode/action.yaml
+++ b/.github/actions/setupnode/action.yaml
@@ -1,12 +1,17 @@
 name: Setup node and install dependencies
 description: "set up Node.js, caches dependencies, and installs them"
+inputs:
+  node-version:
+    description: "Node.js version"
+    required: false
+    default: "22"
 runs:
   using: composite
   steps:
     - name: Setup Node Js
       uses: actions/setup-node@v6
       with:
-        node-version: 22
+        node-version: ${{ inputs.node-version }}
     - name: Print Node version
       run: node -v
       shell: bash
