--- a/.github/workflows/deployreacttogithubpages.yaml
+++ b/.github/workflows/deployreacttogithubpages.yaml
@@ -43,6 +43,7 @@ jobs:
         permissions:
             pages: write      # to deploy to Pages
             id-token: write   # to verify the deployment originates from an appropriate source
+            contents: read
 
         # Deploy to the github-pages environment
         environment:
